--- a/app/views/static/docs.html.erb
+++ b/app/views/static/docs.html.erb
@@ -3,7 +3,7 @@
 
 		<h1 class="heading-lined heading-lined--primary" style="width:100%">Documentation</h1>
 
-		<p class="doc-header">Hosting your own version of Tech Maturity is easy! Visit our <a href="<%= github_path %>">GitHub project</a> for more information on how you can get started or contribute and help make improvements. Have any questions or want to know how you can help? We'd love to <a href="<%= contact_path %>">hear from you!</a></p>
+		<p class="doc-header">Hosting your own version of Tech Maturity is easy!. Have any questions or want to know how you can help? We'd love to <a href="<%= contact_path %>">hear from you!</a></p>
 
 		<h3 class="progressive-form-title text-center"><b><%= CAPABILITIES["a"] %></b></h3><br>
 		<table class="table table-hover table-bordered">
