--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -53,7 +53,7 @@
 			<p>Subcomponent is a deployable package, if the component breaks down into multiple packages, or the underlying data services or data stores that fuel or support the components e.g. database.</p><br>
 
 			<h3 id="question7" class="about-header"><b>How do I contribute to the open source project?</b></h3><br>
-			<p class="text-justify"><a href="<%= github_path %>">Visit our GitHub project </a>for more information on how you can get started and contribute. Have any questions or want to know how you can help? We'd love to <a href="<%= contact_path %>">hear from you!</a></p><br>
+			<p class="text-justify">For more information on how you can get started and contribute. Have any questions or want to know how you can help? We'd love to <a href="<%= contact_path %>">hear from you!</a></p><br>
 
 			<h3 id="question8" class="about-header"><b>Suggestions / Feedback</b></h3><br>
 			<p>We’d love to hear from you! Reach out to us <a href="<%= contact_path %>">here</a></p>
